app/styles/app.scss
@import 'bower_components/bourbon/app/assets/stylesheets/bourbon';
//$gutter: 0em;
@import 'bower_components/neat/app/assets/stylesheets/neat';

* {
	box-sizing: border-box;
}

a {
	text-decoration: none;
}

// Typography
$base-font-family: $helvetica;

// Colors
$blue: #477dca;
$parkfreely-blue: #364CA8;
$dark-gray: #333;
$medium-gray: #999;
$light-gray: #ddd;
$very-light-gray: #fafafa;

$base-font-color: $dark-gray;
$base-background-color: $very-light-gray;

body {
  font-family: $base-font-family;
  background-color: $parkfreely-blue;
  color: $base-background-color;
}

.smallLogo {
	display:block;
  margin-left:auto;
  margin-right:auto;
}

.map-canvas {
  height: 500px;
  @include span-columns(10);
  @include shift(1);
  border-radius: 5px;
}

#lots-create-map {
	height: 180px;
	margin-bottom: 1em;
	border: 1px solid $parkfreely-blue;
}

.lots-index-map {
	height: 180px;
	color: #364CA8;
}

.addContainer {
  @include span-columns(8);
  @include shift(2);
  background-color: #fff;
  border-radius: 5px;
  color: $parkfreely-blue;
	padding: 25px;

  .header {
    text-align: center;
		color: $parkfreely-blue;
		font-size: 1.5em;
		font-family: monospace;
		font-style: italic;
  }

  .map {
    text-align: center;
  }
}

.image-container {
	background: #42C163;
	border: 1px solid $parkfreely-blue;
	border-radius: 5px;
	-webkit-box-shadow: 0 0px 3px 1px #364CA8;
       -moz-box-shadow: 0 0px 3px 1px #364CA8;
            box-shadow: 0 0px 3px 1px #364CA8;
}

.activity-container {
	margin: 0 auto;
}

.activity-list {
	margin: 0 auto;
	margin-bottom: 50px;
}

.activity-check {
	position: relative;
	left: 25%;
	list-style-position: none;
	font-size: 1.2em;
	font-weight: bold;
}


.add-form-description {
  margin: 0 auto;
  width: 500px;
  height: 100px;
  display: block;
  border-radius: 5px;
	font-size: 1em;
	margin-bottom: 1em;
}

.add-form-input {
	padding-right: 1em;
}

.mission-statement,
.index-text {
	text-align: center;
	color: $parkfreely-blue;
	line-height: 2em;
	font-size: 1em;
	margin-bottom: 1em;
}

.mission-statement-list {
	color: $parkfreely-blue;
	list-style: none;
	font-weight: bold;
}

.add-text {
	text-align: center;
}

.user-latitude {
  display: inline-block;
  margin: 20px;
}

.user-longitude {
  display: inline-block;
}

.rateIt {
	display: inline-block;
}

.index-button-searchroute {
	float: right;
}

button,
.add-form-submit {
  @include button;
	background-color: $parkfreely-blue;
}

